--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.jpa.hibernate.ddl-auto=none
+spring.hibernate.dialect=postgresql
+#spring.datasource.initialize=true
+#spring.datasource.url=jdbc:h2:mem:riegosdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
 
-spring.datasource.initialize=true
-spring.datasource.url=jdbc:h2:mem:riegosdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/regantes
+spring.datasource.username=regantes_prodacon
+spring.datasource.password=acaPCB-13
+#spring.datasource.platform=postgresql
